test/functional/failtests/lambdas/assign.mismatchedInferredBase.txt
TypeError: Could not use lambda func where function is not expcted
4 |     int:x = 0;
5 |     x = (): 123;
  |         ^ (5:9)
6 | }

